# Cognitive-Inference-Engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.json.example  package-lock.json  pyproject.toml  requirements.txt  start.py
.github/workflows/: android.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
data/: README.md  load_estimator.joblib  settings.json
docs/: api.md  architecture.md  plugins.md
engine/: __init__.py  config.py  main.py  settings.py
engine/actions/: __init__.py  focus_mode.py  notifications.py  pomodoro.py  task_queue.py
engine/api/: __init__.py  app.py  schemas.py
engine/api/routers/: actions.py  (+4 more)
engine/auth/: email.py  router.py  schemas.py  service.py
engine/db/: connection.py  users.py
engine/inference/: __init__.py  context_classifier.py  load_estimator.py  ml_estimator.py  signal_processor.py
engine/router/: __init__.py  policy_engine.py  rules.py  scheduler.py
engine/telemetry/: __init__.py  aggregator.py  desktop_agent.py  timeline.py
frontend/: .env.example  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  mobile.css
plugins/browser-extension/: background.js  content.js  manifest.json
plugins/lms-connector/: background.js  content.js  manifest.json
scripts/: simulate.py  train_estimator.py
tests/: conftest.py  test_api.py  test_auth.py  test_lms_source.py  test_load_estimator.py  test_policy_engine.py  test_settings.py  test_signal_processor.py  test_telemetry_sources.py  test_timeline_analytics.py
(+39 files in other folders)
