[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-load-router"
version = "0.1.0"
description = "Local-first cognitive load routing engine for student productivity"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Alex Chidera Umeasalugo" }]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
    "ruff>=0.4",
]

[project.scripts]
clr-engine = "engine.main:main"

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
